--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation('com.squareup.retrofit:retrofit:1.6.1')
     implementation('com.twilio.sdk:twilio:7.1.0')
     implementation 'mysql:mysql-connector-java:8.0.20'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.6'
     implementation('com.infobip:infobip-api-java-client:2.0.0')
     implementation('com.telerivet:TelerivetAPIClient:1.7.0')
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.0'
