--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.5.6'
+        springBootVersion = '3.4.0'
     }
 
     repositories {
@@ -11,8 +11,8 @@ buildscript {
 }
 
 plugins {
-    id 'org.springframework.boot' version '2.5.6'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '3.4.0'
+    id 'io.spring.dependency-management' version '1.1.6'
     id 'java'
     id 'idea'
     id 'eclipse'
@@ -22,20 +22,25 @@ plugins {
    // id 'org.cadixdev.licenser' version '0.6.1'
 }
 
-sourceCompatibility = '11'
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+/*sourceCompatibility = '11'
 
 if (project.hasProperty('profile')
         && project.getProperty('profile') == 'deployable') {
     apply from: 'profile-deployable.gradle'
 } else {
     apply from: 'profile-standalone.gradle'
-}
+}*/
 
 repositories {
     mavenCentral()
     maven { url "https://repo.spring.io/libs-release" }
     maven { url "https://repository.jboss.org/nexus/content/repositories/releases" }
-    maven { url "https://jfrog.sandbox.fynarfin.io/artifactory/fyn-libs-snapshot'"}
 }
 
 //license {
@@ -48,16 +53,16 @@ repositories {
 //}
 
 ext {
-    springBootVersion = '2.6.2'
+    springBootVersion = '3.4.0'
 }
 
 dependencies {
-    implementation("org.springframework.boot:spring-boot-starter-web:2.5.5")
-    implementation("org.springframework.boot:spring-boot-starter-actuator:$springBootVersion")
-    implementation("org.springframework.boot:spring-boot-starter-data-jpa:2.5.2")
-    implementation("org.flywaydb:flyway-core:6.4.0")
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-actuator")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation("org.flywaydb:flyway-core:10.10.0")
+    implementation 'org.flywaydb:flyway-mysql:10.10.0'
     implementation('org.apache.velocity:velocity:1.7')
-
     implementation('com.squareup.retrofit:retrofit:1.6.1')
     implementation('com.twilio.sdk:twilio:7.1.0')
     implementation 'mysql:mysql-connector-java:8.0.20'
@@ -65,9 +70,10 @@ dependencies {
     implementation('com.infobip:infobip-api-java-client:2.0.0')
     implementation('com.telerivet:TelerivetAPIClient:1.7.0')
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.0'
-    implementation 'org.json:json:20210307'
+    //implementation 'org.json:json:20210307'
     testImplementation("org.springframework.boot:spring-boot-starter-test")
 }
+/*
 wrapper {
     gradleVersion = '7.3'
-}
+}*/
